# Optimatrix

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/radar_runtime/src/radar_runtime/: __init__.py  __main__.py  cli.py  deribit_public.py  evidence_bundle.py  fixture.py  outcome_bundle.py  outcome_cli.py  outcome_identity.py  outcome_runtime.py  outcome_seal.py  runtime_identity.py  shadow_bundle.py  shadow_cli.py  shadow_identity.py  shadow_report_identity.py  shadow_runtime.py
docs/authority/: CURRENT_STAGE.md  DELIVERY_CONTRACT.md  PRODUCT_CONSTITUTION.md  SYSTEM_ARCHITECTURE.md
docs/contracts/: SHORT_VOL_RADAR.md
offline_audits/: __init__.py  quote_freshness_locator.py
tasks/: DECISION_TRUTH.md  FIXED_POLICY_PUBLIC_SHADOW.md  OUTCOME_TRUTH.md  RADAR_AUTHORITY_REALIGNMENT.md  TEMPLATE.md
tests/: conftest.py  test_authority_and_architecture.py  test_deribit_public.py  test_market_tape.py  test_outcome_runtime.py  test_outcome_shadow.py  test_public_shadow_durability.py  test_public_shadow_run.py  test_quote_freshness_locator.py  test_radar.py  test_runtime_and_hygiene.py  test_shadow.py  test_structures.py  test_unknown_denominator_audit.py  test_window_semantics.py
