[build-system]
requires = ["setuptools==82.0.1", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "optimatrix"
# Required distribution metadata; it is not a product generation or authority identity.
version = "0.0.0"
description = "BTC 0-3DTE public-Shadow risk radar with deterministic capture and replay"
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = ["websockets==16.1.1"]

[project.scripts]
optimatrix-radar = "radar_runtime.cli:main"
optimatrix-outcome = "radar_runtime.outcome_cli:main"
optimatrix-shadow-run = "radar_runtime.shadow_cli:main"

[tool.setuptools]
packages = [
  "market_tape",
  "options_domain",
  "short_vol_radar",
  "shadow_engine",
  "radar_runtime",
]

[tool.setuptools.package-dir]
market_tape = "packages/market_tape/src/market_tape"
options_domain = "packages/options_domain/src/options_domain"
short_vol_radar = "packages/short_vol_radar/src/short_vol_radar"
shadow_engine = "packages/shadow_engine/src/shadow_engine"
radar_runtime = "apps/radar_runtime/src/radar_runtime"

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "-q"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["packages", "apps", "tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "RUF", "UP"]
